--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+Textures/AlienVillage/AlienVillage3.mp4 filter=lfs diff=lfs merge=lfs -text
